Fix login image and captcha inputs on small sizes

--- a/css/login.css
+++ b/css/login.css
@@ -113,9 +113,9 @@ body {
   font-size: 20px;
   line-height: 27px;
 }
-.forget-password-text {
+.forget-password {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 19px;
 }
 .footer-text {
@@ -140,7 +140,7 @@ body {
 .full-width-login-container {
   margin-top: 25px;
   width: 100%;
-  height: 525px;
+  height: 550px;
   display: grid;
   grid-template-columns: 1fr 8fr 1fr;
 }
@@ -181,13 +181,13 @@ body {
   width: 100%;
   height: 70%;
   position: relative;
+  text-align: center;
 }
 
 .login-form-left-image {
-  background-image: url(../img/login/login-form-right.png);
   background-repeat: no-repeat;
   height: 80%;
-  width: 50%;
+  width: auto;
   position: absolute;
   left: 0;
   right: 0;
@@ -233,7 +233,7 @@ body {
 .email-input-container {
   margin: 10px 5px 5px 5px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 19px;
 }
 
@@ -247,7 +247,7 @@ body {
   margin: 10px 5px 5px 5px;
   position: relative;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 19px;
 }
 
@@ -260,7 +260,7 @@ body {
 .captcha-input-container {
   margin: 10px 5px 5px 5px;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 19px;
 }
 
@@ -304,10 +304,14 @@ body {
 
 .forgot-password {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 11px;
   line-height: 20px;
   text-align: end;
   margin-top: 10px;
+}
+
+.stay-signed-in {
+  font-size: 11px;
 }
 
 .login-form-footer {
@@ -342,5 +346,23 @@ body {
 @media (min-width: 992px) {
   .small-login-container {
     display: none !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .captcha-input-container {
+    font-size: 14px;
+  }
+  .password-input-container {
+    font-size: 14px;
+  }
+  .email-input-container {
+    font-size: 14px;
+  }
+  .forgot-password {
+    font-size: 14px;
+  }
+  .stay-signed-in {
+    font-size: 14px;
   }
 }
